# pycomfy

./: .gitignore  .gitmodules  .impeccable.md  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  ROADMAP.md  SMOKE_TEST.md  compliance-report-it17.md  install.ps1  install.sh  main.py  package.json  parallax.spec  pyproject.toml  skills-lock.json
.agents/: PROJECT_CONTEXT.md  state.json
.agents/flow/: it_000001_progress.json  it_000002_product-requirement-document.md  it_000002_progress.json  it_000003_product-requirement-document.md  it_000003_progress.json  it_000004_product-requirement-document.md  it_000004_progress.json  it_000005_PRD.json  it_000005_product-requirement-document.md  it_000005_progress.json  it_000006_PRD.json  it_000006_product-requirement-document.md  it_000006_progress.json  it_000007_product-requirement-document.md  it_000007_progress.json  it_000008_product-requirement-document.md  it_000008_progress.json  it_000009_product-requirement-document.md  it_000009_progress.json  it_000010_PRD.json  it_000010_progress.json  it_000011_PRD.json  it_000011_product-requirement-document.md  it_000011_progress.json  it_000012_product-requirement-document.md  it_000012_progress.json  it_000013_PRD.json  it_000013_compliance-report.md  it_000013_product-requirement-document.md  it_000013_progress.json  it_000014_product-requirement-document.md  it_000014_progress.json  it_000015_progress.json  it_000016_PRD.json  it_000016_product-requirement-document.md  it_000016_progress.json  it_000017_PRD.json  it_000017_product-requirement-document.md  it_000017_progress.json  it_000018_PRD.json  (+235 more)
.agents/flow/archived/: ROADMAP.md.bak
.agents/skills/approve-prototype/: SKILL.md
.agents/skills/audit-prototype/: SKILL.md
.github/workflows/: publish.yml  release-cli.yml
cli/: __init__.py  __main__.py  _async.py  _io.py  _version.py  main.py
cli/_runners/: audio.py  edit_image.py  image.py  video.py
cli/commands/: __init__.py  _common.py  comfyui.py  create.py  edit.py  frontend.py  install.py  jobs.py  mcp.py  ms.py  upscale.py
comfy_diffusion/: __init__.py  _runtime.py  audio.py  conditioning.py  controlnet.py  downloader.py  image.py  latent.py  mask.py  models.py  progress.py  runtime.py  sampling.py  textgen.py  vae.py  video.py
comfy_diffusion/pipelines/: __init__.py  ltx2_i2v.py  ltx2_i2v_distilled.py  ltx2_i2v_lora.py  ltx2_t2v.py  ltx2_t2v_distilled.py  ltx3_i2v.py  ltx3_t2v.py
comfy_diffusion/skills/: README.md  SKILL.md  __init__.py  base-runtime-check.md
comfyui_official_workflows/api/: api_bfl_flux2_max_sofa_swap.json  api_bfl_flux_pro_t2i.json  api_bytedace_seedance1_5_flf2v.json  api_bytedace_seedance1_5_image_to_video.json  api_bytedace_seedance1_5_text_to_video.json  api_bytedance_seedream4.json  api_elevenlabs_text_to_sound_effects.json  api_flux2.json  api_google_gemini.json  api_google_gemini_image.json  api_google_nano_banana2_image_edit.json  api_grok_video.json  api_grok_video_edit.json  api_hunyuan3d_image_to_model.json  api_hunyuan3d_model2uv.json  api_hunyuan3d_retopo_uv.json  api_hunyuan3d_text_to_model.json  api_ideogram_v3_t2i.json  api_king_o3_t2v.json  api_kling2_6_t2v.json  api_kling_o3_flf2v.json  api_kling_o3_i2v.json  api_kling_o3_image.json  api_kling_omni_t2v.json  api_kling_v3_flf2v.json  api_luma_photon_i2i.json  api_luma_photon_style_ref.json  api_luma_t2v.json  api_magnific_skin_enhancer.json  api_openai_dall_e_2_inpaint.json  api_openai_dall_e_2_t2i.json  api_openai_dall_e_3_t2i.json  api_openai_image_1_t2i.json  api_recraft_image_gen_with_color_control.json  api_recraft_image_gen_with_style_control.json  api_recraft_style_reference.json  api_stability_ai_text_to_audio.json  api_template_purz_nb2_single_image_sprite_sheet.json  api_template_sirolim_any_aspect_ratio_nb2.json  api_templates-2x2_grid-character_bg_product.json  (+28 more)
docs/: comfy_diffusion.md  parallax_cli.md  parallax_mcp.md  parallax_ms.md  parallax_sdk.md  server.md
examples/: ace_step_15_example.py  anima_preview.py  controlnet_txt2img_example.py  flux_klein_edit_9b_base.py  flux_klein_edit_9b_kv.py  flux_klein_t2i_4b_base.py  flux_klein_t2i_4b_distilled.py  ltxv2_t2sv_example.py  sdxl_t2i.py  separate_components_example.py  simple_checkpoint_esrgan_upscale_example.py  simple_checkpoint_example.py  video_ltx2_audio_to_video.py  video_wan21_i2v.py  wan22_i2v.py  wan22_s2v.py  wan22_t2v.py  wan_video_example.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts  vite-env.d.ts
mcp/: __init__.py  __main__.py  main.py
mcp/tools/: __init__.py  inference.py  jobs.py
parallax/: __init__.py  __main__.py
pycomfy/: __init__.py  _runtime.py  audio.py  conditioning.py  lora.py  models.py  runtime.py  sampling.py  vae.py
scripts/: bump-version.ts
server/: app.py  gateway.py  job_queue.py  jobs.py  main.py  queue.py  schemas.py  submit.py  worker.py
tests/: test_ace_step_v1_5_pipelines.py  test_audio.py  test_audio_wrappers_phase6.py  test_build_us001_it000045.py  test_ci_us002_it000045.py  test_cli_comfyui_us001_it000048.py  test_cli_comfyui_us002_it000048.py  test_cli_comfyui_us003_it000048.py  test_cli_comfyui_us004_it000048.py  test_cli_comfyui_us005_it000048.py  test_cli_frontend_us001_it000047.py  test_cli_frontend_us002_it000047.py  test_cli_frontend_us003_it000047.py  test_cli_us001_it000045.py  test_cli_us001_it000046.py  test_cli_us001_it044.py  test_cli_us002_it000045.py  test_cli_us002_it000046.py  test_cli_us002_it044.py  test_cli_us003_it044.py  test_cli_us004_it044.py  test_comfyui_submodule.py  test_conditioning.py  test_controlnet.py  test_cpu_only_smoke.py  test_create_video_audio.py  test_downloader.py  test_downloader_download_models.py  test_downloader_entry_types.py  test_downloader_progress.py  test_downloader_sha256.py  test_esrgan_example_uses_public_api.py  test_image.py  test_image_wrappers_it033.py  test_image_wrappers_it034.py  test_image_wrappers_phase6.py  test_install_ps1_us002_it000045.py  test_install_sh_us001_it000045.py  test_latent.py  test_lora.py  (+110 more)
(+252 files in other folders)
