[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-diffusion"
version = "0.1.1"
description = "ComfyUI inference engine as a standalone Python library (no server, no UI)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.1",
    "psutil",
]

[project.optional-dependencies]
# torch from pytorch-cpu / pytorch-cuda index (see [tool.uv.sources])
cpu = ["torch"]
cuda = ["torch"]
# ComfyUI runtime deps (from vendor/ComfyUI/requirements.txt via: uv add -r vendor/ComfyUI/requirements.txt --optional comfyui)
comfyui = [
    "aiohttp>=3.11.8",
    "alembic>=1.18.4",
    "av>=14.2.0",
    "comfy-aimdo>=0.2.7",
    "comfy-kitchen>=0.2.7",
    "comfyui-embedded-docs==0.4.3",
    "comfyui-frontend-package==1.39.19",
    "comfyui-workflow-templates==0.9.10",
    "einops>=0.8.2",
    "glfw>=2.10.0",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyopengl>=3.1.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "safetensors>=0.4.2",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "spandrel>=0.4.2",
    "sqlalchemy>=2.0.48",
    "tokenizers>=0.13.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchsde>=0.2.6",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
include = ["comfy_diffusion*"]

[tool.uv]
# This project uses uv for install, lock, and run. See README and AGENTS.md.

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cuda", marker = "extra != 'cpu' and extra == 'cuda'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cuda", marker = "extra != 'cpu' and extra == 'cuda'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cuda", marker = "extra != 'cpu' and extra == 'cuda'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
