[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-diffusion"
version = "1.3.0"
description = "ComfyUI inference engine as a standalone Python library (no server, no UI)."
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Alejandro Quintero" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
urls = { Homepage = "https://github.com/quinteroac/comfy-diffusion", Repository = "https://github.com/quinteroac/comfy-diffusion", Issues = "https://github.com/quinteroac/comfy-diffusion/issues" }
dependencies = [
    "pillow>=12.1.1",
    "psutil",
]

[project.optional-dependencies]
# NOTE: [cpu] and [cuda] select PyTorch build variant via [tool.uv.sources] index
# markers. This distinction is only honoured by uv; plain pip will resolve the
# default PyPI torch for both extras. Always use: uv pip install ".[cpu]" or
# uv pip install ".[cuda]"
cpu = ["torch"]
cuda = ["torch"]
video = [
    "opencv-python>=4.13.0.92",
    "imageio>=2.37.2",
]
audio = ["torchaudio"]
downloader = [
    "huggingface_hub>=0.20",
    "tqdm>=4.67",
]
# NOTE: [all] mirrors the union of [cpu], [cuda], [video], and [audio]. If a dep
# changes in one of those extras, update it here too to keep [all] in sync.
all = [
    "torch",
    "opencv-python>=4.13.0.92",
    "imageio>=2.37.2",
    "torchaudio",
]
# ComfyUI runtime deps (from vendor/ComfyUI/requirements.txt via: uv add -r vendor/ComfyUI/requirements.txt --optional comfyui)
comfyui = [
    "aiohttp>=3.11.8",
    "alembic>=1.18.4",
    "av>=14.2.0",
    "blake3",
    "comfy-aimdo>=0.2.12",
    "comfy-kitchen>=0.2.8",
    "comfyui-embedded-docs==0.4.3",
    "comfyui-frontend-package==1.41.21",
    "comfyui-workflow-templates==0.9.26",
    "einops>=0.8.2",
    "glfw>=2.10.0",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyopengl>=3.1.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "simpleeval>=1.0.0",
    "safetensors>=0.4.2",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "spandrel>=0.4.2",
    "sqlalchemy>=2.0.48",
    "tokenizers>=0.13.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchsde>=0.2.6",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
include = ["comfy_diffusion*"]

[tool.setuptools.package-data]
comfy_diffusion = [
    "py.typed",
    "skills/**/*.md",
]

[tool.uv]
# This project uses uv for install, lock, and run. See README and AGENTS.md.

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cuda", marker = "extra != 'cpu' and extra == 'cuda'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cuda", marker = "extra != 'cpu' and extra == 'cuda'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
  { index = "pytorch-cuda", marker = "extra != 'cpu' and extra == 'cuda'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
