[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-diffusion"
version = "1.3.3"
description = "ComfyUI inference engine as a standalone Python library (no server, no UI)."
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Alejandro Quintero" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
urls = { Homepage = "https://github.com/quinteroac/comfy-diffusion", Repository = "https://github.com/quinteroac/comfy-diffusion", Issues = "https://github.com/quinteroac/comfy-diffusion/issues" }
dependencies = [
    "aiohttp>=3.11.8",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "av>=14.2.0",
    "blake3",
    "comfy-aimdo>=0.2.12",
    "comfy-kitchen>=0.2.8",
    "comfyui-embedded-docs==0.4.3",
    "comfyui-frontend-package==1.41.21",
    "comfyui-workflow-templates==0.9.26",
    "einops>=0.8.2",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.0",
    "glfw>=2.10.0",
    "httpx[http2]>=0.28.1",
    "huggingface_hub>=0.20",
    "imageio>=2.37.2",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyopengl>=3.1.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=13.0",
    "safetensors>=0.4.2",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "simpleeval>=1.0.0",
    "spandrel>=0.4.2",
    "sqlalchemy>=2.0.48",
    "tokenizers>=0.13.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchsde>=0.2.6",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=4.50.3",
    "typer>=0.24.1",
    "yarl>=1.18.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10", "aiosqlite>=0.22.1"]
cli-build = ["pyinstaller>=6.0"]

[project.scripts]
parallax = "cli.main:app"
parallax-mcp = "mcp.main:main"

[tool.setuptools.packages.find]
include = ["comfy_diffusion*", "cli*", "parallax*", "mcp*", "server*"]

[tool.setuptools.package-data]
comfy_diffusion = [
    "py.typed",
    "skills/**/*.md",
]

[tool.uv]
# This project uses uv for install, lock, and run. See README and AGENTS.md.

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
